# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The Cangjie API is in Beta. For details on its capabilities and limitations, please refer to the README file.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("kit.BasicServicesKit") {
  sources = ["index.cj"]

  cj_deps = ["../../ohos/settings:ohos.settings"]

  cj_external_deps = [
    "startup_cangjie_wrapper:ohos.device_info",
    "request_cangjie_wrapper:ohos.request",
    "time_cangjie_wrapper:ohos.system_date_time",
    "notification_cangjie_wrapper:ohos.common_event_manager",
    "powermgr_cangjie_wrapper:ohos.battery_info"
  ]

  subsystem_name = "applications"
  part_name = "applications_cangjie_wrapper"
}